fixed font issue on mobile

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -169,7 +169,6 @@
       font-family: var(--font-mono);
       font-size: 1.2rem;
       line-height: 1.5;
-      font-family: "Barlow", sans-serif;
       background: var(--background-color);
       color: var(--text-color);
     }
